shared/elastic-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-stack-public
  namespace: elastic-stack
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.rcbot.app
      secretName: kibana.rcbot.app-cert
  rules:
  - host: kibana.rcbot.app
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
